More Informative Scan: Fix header overflow

--- a/client/components/jetpack/threat-fix-header/style.scss
+++ b/client/components/jetpack/threat-fix-header/style.scss
@@ -63,7 +63,9 @@
     font-weight: 600;
     font-size: $font-body-large;
     line-height: 24px;
-    overflow: scroll;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__card-bottom {
